--- a/rails_tutorial/app/views/layouts/application.html.erb
+++ b/rails_tutorial/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title><%= full_title yield :title %></title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag "application", media: "all","data-turbolinks-track": "reload" %>
+  <%= stylesheet_link_tag "application", media: "all",
+    "data-turbolinks-track": "reload" %>
   <%= javascript_importmap_tags %>
 </head>
 <body>
