--- a/rails_tutorial/app/views/layouts/_header.html.erb
+++ b/rails_tutorial/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to t(".english"), locale:"en" %>
-    <%= link_to t(".vietnamese"), locale:"vi" %>
+    | <%= link_to t(".vietnamese"), locale:"vi" %>
     <%= link_to "Sample App", root_path, id: "logo" %>
     <nav class="navbar-right navbar-nav nav">
       <li><%= link_to t(".home"), root_path %></li>
-      <li><%= link_to t(".help"), "#" %></li>
+      <li><%= link_to t(".help"), static_pages_help_path %></li>
       <% if logged_in? %>
         <li><%= link_to t(".users"), users_path %></li>
         <li class="dropdown">
