--- a/rails_tutorial/app/views/users/new.html.erb
+++ b/rails_tutorial/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t(".title") %>
-<% provide :button_text, t(".create_my_account") %>
+<% provide :button_text, t(".submit") %>
 <h1><%= t(".heading") %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
