Chapter 10: Manage user

--- a/rails_tutorial/app/views/static_pages/help.html.erb
+++ b/rails_tutorial/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
-<% provide :title, t(".title", default: t("helpers.page_title.help")) %>
+<% provide :title, t(".title")) %>
 
-<h1><%= t(".title") %></h1>
+<h1><%= t(".heading") %></h1>
 <p>
   <%= t(".rails_tutorial_help") %>
   <%= link_to "http://www.railstutorial.org/help" do %>
