--- a/rails_tutorial/app/views/layouts/_header.html.erb
+++ b/rails_tutorial/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to t(".home"), root_path %></li>
       <li><%= link_to t(".help"), "#" %></li>
       <% if logged_in? %>
-        <li><%= link_to t(".users"), "#" %></li>
+        <li><%= link_to t(".users"), users_path %></li>
         <li class="dropdown">
           <%= link_to "#", class: "dropdown-toggle", "data-toggle": "dropdown",
             id: "account" do %>
@@ -16,7 +16,7 @@
           <% end %>
           <ul class="dropdown-menu">
             <li><%= link_to t(".profile"), current_user %></li>
-            <li><%= link_to t(".setting"), "#" %></li>
+            <li><%= link_to t(".setting"), edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li><%= link_to t(".log_out"), logout_path,
               data: {turbo_method: :delete} %></li>
