--- a/rails_tutorial/app/views/user_mailer/password_reset.html.erb
+++ b/rails_tutorial/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,5 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1><%= t ".heading" %></h1>
+<p><%= t ".content_1" %></p>
+<%= link_to t(".link"),
+  edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
+<p><%= t ".content_2" %></p>
