--- a/rails_tutorial/app/views/static_pages/home.html.erb
+++ b/rails_tutorial/app/views/static_pages/home.html.erb
@@ -1,12 +1,28 @@
 <% provide :title, t(".title") %>
 
-<div class="center jumbotron">
-  <h1><%= t(".heading") %></h1>
-  <h2><%= t(".rails_tutorial_home") %>
-    <%= link_to "http://www.railstutorial.org/" do %>
-      <%= t(".rails_tutorial_link") %>
-    <% end %>
-  <%= t(".sample_app") %>
-  </h2>
-  <%= link_to t(".sign_up_now!"), signup_path, class: "btn btn-lg btn-primary" %>
-</div>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micropost_form" %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3><%= t(".heading_2") %></h3>
+    <%= render "shared/feed" %></div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1><%= t(".heading_1") %></h1>
+    <h2><%= t(".rails_tutorial_home") %>
+      <%= link_to "http://www.railstutorial.org/" do %>
+        <%= t(".rails_tutorial_link") %>
+      <% end %>
+    <%= t(".sample_app") %>
+    </h2>
+    <%= link_to t(".sign_up_now!"), signup_path, class: "btn btn-lg btn-primary" %>
+  </div>
+<% end %>
